[gd_scene load_steps=12 format=3 uid="uid://k8rhs2u68028"]

[ext_resource type="Script" path="res://script/player.gd" id="1_ttq32"]
[ext_resource type="Material" uid="uid://cpymtnyjv2p4b" path="res://materials/face_1.tres" id="2_5pfmk"]
[ext_resource type="Texture2D" uid="uid://dvsllhyjaahjs" path="res://texture/arrow_1.png" id="3_ibpgk"]
[ext_resource type="Texture2D" uid="uid://dqt82ywrc6h8g" path="res://texture/highlight.png" id="4_dyfrk"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_buxik"]

[sub_resource type="SphereMesh" id="SphereMesh_f7xbn"]
material = ExtResource("2_5pfmk")

[sub_resource type="Animation" id="Animation_wvwah"]
resource_name = "loop"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 2.5, 0), Vector3(0, 2.48, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.840896),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 1.05, 0)]
}

[sub_resource type="Animation" id="Animation_mj121"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.4, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.888469, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_klsuy"]
_data = {
"RESET": SubResource("Animation_mj121"),
"loop": SubResource("Animation_wvwah")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hu6dd"]
height = 3.099
radius = 1.915

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5c2xa"]
height = 3.315
radius = 1.5

[node name="Node3D" type="Node3D"]
script = ExtResource("1_ttq32")
current = null

[node name="body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.888469, 0)
mesh = SubResource("CapsuleMesh_buxik")

[node name="head" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.4, 0)
mesh = SubResource("SphereMesh_f7xbn")

[node name="first_person_cam" type="Camera3D" parent="head"]

[node name="Sprite3D" type="Sprite3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.405, -1.415)
texture = ExtResource("3_ibpgk")

[node name="third_person_cam" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.295, 3.128)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_klsuy")
}

[node name="persoal_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4052, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="persoal_area"]
shape = SubResource("CylinderShape3D_hu6dd")

[node name="ears" type="AudioListener3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.21061, 0)

[node name="selection_highlight" type="Sprite3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, -5.24537e-08, -1.2, 0, 1.2, -5.24537e-08, -0.169604, 0.130299, -0.162122)
visible = false
texture = ExtResource("4_dyfrk")

[node name="selection_area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="selection_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27744, 0)
shape = SubResource("CylinderShape3D_5c2xa")

[connection signal="area_entered" from="selection_area" to="." method="_on_selection_area_area_entered"]
[connection signal="area_exited" from="selection_area" to="." method="_on_selection_area_area_exited"]
